Add complete config server logic

--- a/punto1/alanisforero-dipardo-valuisa/alanisforero-dipardo-valuisa/src/main/resources/application.yml
+++ b/punto1/alanisforero-dipardo-valuisa/alanisforero-dipardo-valuisa/src/main/resources/application.yml
@@ -1,3 +1,7 @@
 spring:
   application:
     name: alanisforero-dipardo-valuisa
+
+  config:
+    # Config server url
+    import: configserver:http://localhost:8888
